# c2-enricher

./: .gitignore  DESIGN.md  DESIGN_AGENT.md  DESIGN_PARITY.md  Dockerfile  LICENSE  NOTICE  README.md  pyproject.toml
deploy/: README.md  docker-compose.overlay.yml  docker-compose.yml  fluent.conf  server.md  stingar.env.example
deploy/fluentd/: README.md  c2-engine.conf
deploy/sensor/: README.md  docker-compose.yml  stingar-hp.env.example
docs/: DESIGN.md  DESIGN_AGENT.md  DESIGN_PARITY.md
es/dashboards/: README.md  build_dash.py  build_entity_view.py  build_geo_map.py  build_intel_dataview.py  build_payload_explorer.py  c2-command-center.ndjson  c2-entity-view.ndjson  c2-geo-map.ndjson  c2-intel.ndjson  c2-payload-explorer.ndjson
es/ilm/: stingar-c2-policy.json  stingarc2-policy.json
es/templates/: stingar-c2.json  stingarc2.json
sensor/: README.md  stingar.py
sensor/cowrie/: Dockerfile.stingar  requirements-output.txt
sensor/cowrie/stingar/: checkin.py  configure.py  entrypoint.py
sensor/tests/: test_sensor_plugins.py
src/c2engine/: __init__.py  cli.py  context.py  pipeline.py
src/c2engine/analyze/: __init__.py  credentials.py  iocs.py  shape.py
src/c2engine/core/: banner.py  canonical.py  shell.py
src/c2engine/elastic/: __init__.py  client.py  schema.py
src/c2engine/enrich/: __init__.py  family.py  geo.py  session.py
tests/: test_enrich.py  test_extract.py  test_feed.py  test_ingest.py  test_intel.py  test_model.py  test_reason.py  test_vt.py
tests/fixtures/: session_basic.json
tests/integration/: README.md  smoke.py
(+46 files in other folders)
