[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "c2-engine"
version = "0.1.0"
description = "Central C2-detection engine for a STINGAR/Cowrie honeypot fleet"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7",
    "msgpack>=1.0",
]

[project.optional-dependencies]
geo = ["geoip2>=4.8"]
dev = ["pytest>=8", "ruff>=0.4", "mypy>=1.10"]

[project.scripts]
c2-engine = "c2engine.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/c2engine"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.mypy]
strict = true
packages = ["c2engine"]
mypy_path = "src"
